--- a/README
+++ b/README
@@ -1,7 +1,6 @@
 ChatBot-Simple
 
-ChatBot::Simple is a tentative to create a new and flexible chatbot
-engine in Perl.
+ChatBot::Simple is a new and flexible chatbot engine in Perl.
 
 Instead of specifying the chatbot knowledge base in xml, we are
 going to use the powerfult text manipulation capabilities of Perl.
